[package]
name = "doctor"
version = "0.3.3"
description = "Flexible low level parser for Javadoc-style doc comments: Javadoc, JSDoc, TSDoc, etc."
authors = ["Vladimir Guguiev <wizardzloy@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/vovacodes/doctor"
documentation = "https://docs.rs/doctor"
categories = ["parser-implementations"]
keywords = ["doc", "javadoc", "jsdoc", "tsdoc", "parser"]

[dependencies]
nom = "6.0.1"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
version-sync = "0.9"
